Fix spacing.size()

--- a/scss/spacing.scss
+++ b/scss/spacing.scss
@@ -7,7 +7,7 @@
 
 @function size($value) {
   @if isGridSizeReference($value) {
-    @return "var(--grid-#{$value})";
+    @return var(--grid-#{$value});
   } @else if $value == null {
     @return 0;
   } @else {
